example/admissionregistration.yaml
########################################################
# k8s-namespace-guard Admission webhook registration
########################################################
# Please update the CABundle with valid CA
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: k8s-namespace-guard
webhooks:
- name: k8s-namespace-guard.yahoo.io
  rules:
  - operations:
    - DELETE
    apiGroups:
    - ""
    apiVersions:
    - v1
    resources:
    - namespaces
  failurePolicy: Fail
  clientConfig:
    service:
      name: k8s-namespace-guard
      namespace: default
    caBundle: ""
